# dsrptrabajofinalmle2

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
FR_MLE2/feature_repo/: energy.py  feature_store.yaml
FR_MLE2/feature_repo/data/: driver_stats.parquet  online_store.db  registry.db
notebooks/: 1.AnalisisExploratorio.ipynb  Demo.ipynb  Uno.ipynb
notebooks/mlruns/0/: meta.yaml
notebooks/mlruns/0/4539c1c2b4764db099b4ee4dd5cfc917/: meta.yaml
notebooks/mlruns/0/4539c1c2b4764db099b4ee4dd5cfc917/tags/: mlflow.source.name
packageDsrpMLE2/: __init__.py  config.py  pre_proc.py
