[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "packageDsrpMLE2"
version = "0.0.1"
description = "Este es el trabajo final del modulo MLE2 del programa de epecializado en Machine Learning Engineer"
authors = [
  { name = "Jose A. Cusihuallpa" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "ipython",
    "jupyterlab",
    "matplotlib",
    "notebook",
    "numpy",
    "pandas",
    "pip",
    "python-dotenv",
    "ruff",
    "scikit-learn",
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["packageDsrpMLE2"]
include = ["pyproject.toml", "packageDsrpMLE2/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["packageDsrpMLE2"]
force-sort-within-sections = true

