[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "packageDsrpMLE2"
version = "0.0.1"
description = "Este es el trabajo final del modulo MLE2 del programa de epecializado en Machine Learning Engineer"
authors = [
  { name = "Jose A. Cusihuallpa" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
dependencies = [
    "dagshub>=0.6.3",
    "ipython",
    "ipywidgets>=8.1.7",
    "jupyterlab",
    "jupyterlab-widgets>=3.0.15",
    "matplotlib",
    "mlflow>=2,<3",
    "notebook",
    "numpy==1.26.4",
    "pandas",
    "pip",
    "plotly>=6.3.0",
    "pmdarima>=2.0.4",
    "prophet>=1.1.7",
    "python-dotenv",
    "ruff",
    "scikit-learn",
    "seaborn>=0.13.2",
    "statsmodels>=0.14.5",
    "xgboost>=3.0.4",
]
requires-python = "~=3.10.0"


[tool.ruff]
line-length = 99
src = ["packageDsrpMLE2"]
include = ["pyproject.toml", "packageDsrpMLE2/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["packageDsrpMLE2"]
force-sort-within-sections = true

